@@ -37,6 +37,8 @@ Bugfixes:
   (Jira APPSERVER-85)
 - random server freezing resolved (Jira APPSERVER-41)
 - send correct timestamps if seeking beyond end of file (Jira APPSERVER-54)
+- fixed NoSuchElementException when iterating connections during disconnect
+  (Jira APPSERVER-94)
 
 
 Red5 0.6rc2 (2007-02-12)
